--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.7.7",
+    "body-parser": "^1.20.3",
     "csv-writer": "^1.6.0",
+    "dotenv": "^16.4.5",
     "exceljs": "^4.4.0",
     "express": "^4.21.1",
     "google-auth-library": "^9.15.0",
